# ifc2rdf-app

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ifc2rdf_app/: README.md  ifc2rdfApp.py
tests/resources/: Demonstration_Model_V1_DTV_4.ttl
