[tool.poetry]
name = "ifc2rdf-app"
version = "0.1.0"
description = ""
authors = ["Janakiram Karlpudi <janakiramkarlapudi841@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
ifc2rdftool = {git = "https://github.com/Janakiram916/ifc2rdfTool"}
flet = "^0.19.0"
pyinstaller = "^6.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
